
---
** New variable 'xft-ignore-color-fonts'.
Default t means don't try to load color fonts when using Xft, as they
often cause crashes.  Set it to nil if you really need those fonts.


* Editing Changes in Emacs 26.2


* Changes in Specialized Modes and Packages in Emacs 26.2

** Ibuffer

---
*** New toggle 'ibuffer-do-toggle-lock', bound to 'L'.

** Gnus

---
*** Mailutils movemail will now be used if found at runtime.
The default value of mail-source-movemail-program is now "movemail".
This ensures that the movemail program from GNU Mailutils will be used
if found in 'exec-path', even if it was not found at build time.  To
use a different program, customize mail-source-movemail-program to the
absolute file name of the desired executable.

** Shell mode

---
*** Shell mode buffers now have 'scroll-conservatively' set to 101.
This is so as to better emulate the scrolling behavior of a text
terminal when new output is added to the screen buffer.  To get back
the previous behavior, reset 'scroll-conservatively' to zero (or any
other value you like) in a function and add it to 'shell-mode-hook'.
(This change was actually made in Emacs 26.1, but was not called out
in its NEWS.)

** VC

*** VC support for Mercurial was improved.
Emacs now avoids invoking 'hg' as much as possible, for faster operation.
(This and the following changes were actually made in Emacs 26.1, but
were not called out in its NEWS.)

---
**** New vc-hg options.
The new option 'vc-hg-parse-hg-data-structures' controls whether vc-hg
will try parsing the Mercurial data structures directly instead of
running 'hg'; it defaults to t (set to nil if you want the pre-26.1
behavior).
The new option 'vc-hg-symbolic-revision-styles' controls how versions
in a Mercurial repository are presented symbolically on the mode line.
The new option 'vc-hg-use-file-version-for-mode-line-version' controls
whether the version shown on the mode line is that of the visited file
or of the repository working copy.

---