@@ -50,6 +50,11 @@ often cause crashes.  Set it to nil if you really need those fonts.
 ---
 *** New toggle 'ibuffer-do-toggle-lock', bound to 'L'.
 
+** Imenu
+
+---
+*** The value for 'imenu-auto-rescan-maxout' has been increased to 600000.
+
 ** Gnus
 
 ---
